--- a/client/client.html
+++ b/client/client.html
@@ -9,6 +9,17 @@
         </script>
     </head>
     <body>
-        <!-- TODO: HTML body -->
+        <section id="searcher">
+            <select id="searchSelect">
+                <option value="cardName">Card Name</option>
+                <!-- TODO: Add all search endpoints -->
+            </select>
+            <label for="searchSelect">Search method: </label>
+            <form id="searchForm">
+                <section id="searchSpace"></section>
+                <input type="submit" value="Send">
+            </form>
+        </section>
+        <section id="content"></section>
     </body>
 </html>
