--- a/client/client.html
+++ b/client/client.html
@@ -19,28 +19,29 @@
                 switch(spaceType){
                     case "cardName":
                         space.innerHTML = 
-                        "<input type=\"text\" id=\"nameInput\">" + 
-                        "<label for=\"nameInput\">Enter card name: </label>";
+                        "<label for=\"nameInput\">Enter card name: </label>" +
+                        "<input type=\"text\" id=\"nameInput\">";
                         break;
                     case "atkDefRange":
                         space.innerHTML = 
-                        "<input type=\"number\" id=\"minAtk\">" + 
                         "<label for=\"minAtk\">Minimum ATK: " +
-                        "<input type=\"number\" id=\"maxAtk\">" + 
+                        "<input type=\"number\" id=\"minAtk\">" + 
                         "<label for=\"maxAtk\">Maximum ATK: " +
-                        "<input type=\"number\" id=\"minDef\">" + 
+                        "<input type=\"number\" id=\"maxAtk\">" + 
                         "<label for=\"minDef\">Minimum DEF: " +
-                        "<input type=\"number\" id=\"maxDef\">" + 
-                        "<label for=\"maxDef\">Maximum DEF: ";
+                        "<input type=\"number\" id=\"minDef\">" + 
+                        "<label for=\"maxDef\">Maximum DEF: " +
+                        "<input type=\"number\" id=\"maxDef\">";
                         break;
                     case "level":
                         space.innerHTML = 
+                        "<label for=\"lvlSelect\">Level: </label>" +
                         "<select id=\"lvlSelect\">" + 
-                        fillLvl() + "</select>" + 
-                        "<label for=\"lvlSelect\">Level: </label>";
+                        fillLvl() + "</select>";
                         break;
                     case "type":
                         space.innerHTML = 
+                        "<label for=\"typeSelect\">Select card type: </label>" +
                         "<select id=\"typeSelect\">" + 
                         "<option value=\"NonEffect\">Non-Effect</option>" + 
                         "<option value=\"Effect\">Effect</option>" +
@@ -51,10 +52,20 @@
                         "<option value=\"Link\">Link</option>" + 
                         "<option value=\"Spell\">Spell</option>" +
                         "<option value=\"Trap\">Trap</option>" +
-                        "</select>" + 
-                        "<label for=\"typeSelect\">Select card type: </label>";
+                        "</select>";
                         break;
                     case "attribute":
+                        space.innerHTML = 
+                        "<label for=\"attributeSelect\">Select attribute: </label>" +
+                        "<select id=\"attributeSelect\">" + 
+                        "<option value=\"DARK\">DARK</option>" +
+                        "<option value=\"LIGHT\">LIGHT</option>" +
+                        "<option value=\"FIRE\">FIRE</option>" +
+                        "<option value=\"WIND\">WIND</option>" +
+                        "<option value=\"WATER\">WATER</option>" +
+                        "<option value=\"EARTH\">EARTH</option>" +
+                        "<option value=\"DIVINE\">DIVINE</option>" + 
+                        "</select>";
                         break;
                     default:
                         updateSpace();
@@ -63,12 +74,19 @@
             }
 
             const init = () => {
+                const searchMethod = document.querySelector("#searchSelect");
 
+                updateSpace();
+
+                searchMethod.onchange = () => {updateSpace(searchMethod.value)}
             }
+
+            window.onload = init;
         </script>
     </head>
     <body>
         <section id="searcher">
+            <label for="searchSelect">Search method: </label>
             <select id="searchSelect">
                 <option value="cardName">Card Name</option>
                 <option value="atkDefRange">ATK / DEF Range</option>
@@ -76,7 +94,6 @@
                 <option value="type">Card Type</option>
                 <option value="attribute">Attribute</option>
             </select>
-            <label for="searchSelect">Search method: </label>
             <form id="searchForm">
                 <section id="searchSpace"></section>
                 <input type="submit" value="Send">
