Finished client poster HTML

--- a/client/client.html
+++ b/client/client.html
@@ -46,6 +46,7 @@
                         "<select id=\"typeSelect\">" +
                         "<option value=\"NonEffect\">Non-Effect</option>" +
                         "<option value=\"Effect\">Effect</option>" +
+                        "<option value=\"Ritual\">Ritual</option>" +
                         "<option value=\"Fusion\">Fusion</option>" +
                         "<option value=\"Synchro\">Synchro</option>" +
                         "<option value=\"Xyz\">Xyz</option>" +
