--- a/client/client-poster.html
+++ b/client/client-poster.html
@@ -10,8 +10,11 @@
     <body>
         <form id="postForm">
             <h3>Required Parameters:</h3>
-            <input type="text" id="cardName">
-            <input type="text" id="cardSet">
+            <label for="cardName">Card Name: </label>
+            <input type="text" id="cardName"><p></p>
+            <label for="cardSet">Card Set: </label>
+            <input type="text" id="cardSet"><p></p>
+            <label for="cardRarity">Rarity: </label>
             <select id="cardRarity">
                 <option value="Common">Common</option>
                 <option value="Rare">Rare</option>
@@ -22,13 +25,16 @@
                 <option value="Ghost Rare">Ghost Rare</option>
                 <option value="Premium Gold Rare">Premium Gold Rare</option>
                 <option value="Other">Other</option>
-            </select>
-            <input type="text" id="cardNumber">
+            </select><p></p>
+            <label for="cardNumber">Card Number (make unique!): </label>
+            <input type="text" id="cardNumber"><p></p>
+            <label for="cardType">Type of Card: </label>
             <select id="cardType">
                 <option id="Monster">Monster</option>
                 <option id="Spell">Spell</option>
                 <option id="Trap">Trap</option>
-            </select>
+            </select><p></p>
+            <label for="cardAttribute">Attribute: </label>
             <select id="cardAttribute">
                 <option value="DARK">DARK</option>
                 <option value="LIGHT">LIGHT</option>
@@ -39,10 +45,14 @@
                 <option value="DIVINE">DIVINE</option>
                 <option value="SPELL">SPELL</option>
                 <option value="TRAP">TRAP</option>
-            </select>
-            <input type="number" id="cardATK">
-            <input type="number" id="cardDEF">
-            <input type="number" id="cardLevel">
+            </select><p></p>
+            <label for="cardATK">ATK: </label>
+            <input type="number" id="cardATK"><p></p>
+            <label for="cardDEF">DEF: </label>
+            <input type="number" id="cardDEF"><p></p>
+            <lable for="cardLevel">Level/Rank: </lable>
+            <input type="number" id="cardLevel"><p></p>
+            <p>Add your card's types:</p>
             <section id="typesSection">
                 <div id="typesHolder"></div>
                 <input type="text" id="specificType">
@@ -51,13 +61,21 @@
             </section>
 
             <p></p>
+            <p></p>
+            <p></p>
             
             <h3>Optional Parameters:</h3>
-            <input type="text" id="summonedBy">
-            <input type="text" id="ritualRequired">
-            <input type="text" id="ritualMonsterRequired">
-            <input type="number" id="pendulumScale">
-            <input type="number" id="linkVal">
+            <label for="summonedBy">This card is summoned by the effect of: </label>
+            <input type="text" id="summonedBy"><p></p>
+            <label for="ritualRequired">Ritual spell required: </label>
+            <input type="text" id="ritualRequired"><p></p>
+            <label for="ritualMonsterRequired">Ritual monster required: </label>
+            <input type="text" id="ritualMonsterRequired"><p></p>
+            <label for="pendulumScale">Pendulum Scale: </label>
+            <input type="number" id="pendulumScale"><p></p>
+            <label for="linkVal">LINK: </label>
+            <input type="number" id="linkVal"><p></p>
+            <p>Select Link Arrows:</p>
             <select multiple id="linkArrows">
                 <option value="Top-Left">Top Left</option>
                 <option value="Top-Center">Top Center</option>
@@ -67,7 +85,8 @@
                 <option value="Bottom-Left">Bottom Left</option>
                 <option value="Bottom-Center">Bottom Center</option>
                 <option value="Bottom-Right">Bottom Right</option>
-            </select>
+            </select><p></p>
+            <input type="submit" value="Send">
         </form>
         <section id="result"></section>
     </body>
